--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^10.14.0",
     "moment": "^2.30.1",
+    "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^4.7.76",
     "pinia": "^2.2.4",
     "pizzip": "^3.1.7",
