--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "docxtemplater-image-module-free": "^1.1.1",
     "file-saver": "^2.0.5",
     "firebase": "^10.14.0",
+    "jspdf": "^2.5.2",
     "moment": "^2.30.1",
     "pdf-lib": "^1.17.1",
-    "pdfjs-dist": "^4.7.76",
     "pinia": "^2.2.4",
     "pizzip": "^3.1.7",
     "postcss": "^8.4.47",
