--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "docxtemplater": "^3.51.0",
     "docxtemplater-image-module-free": "^1.1.1",
     "file-saver": "^2.0.5",
