--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "dob-to-age": "^4.0.0",
     "docxtemplater": "^3.51.0",
     "docxtemplater-image-module-free": "^1.1.1",
     "file-saver": "^2.0.5",
     "firebase": "^10.14.0",
+    "install": "^0.13.0",
     "jspdf": "^2.5.2",
     "moment": "^2.30.1",
+    "npm": "^10.9.2",
     "pdf-lib": "^1.17.1",
     "pinia": "^2.2.4",
     "pizzip": "^3.1.7",
